# diffsoup

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: 01_mip360.py  02_mip360_test.py  02_mip360_test_profile.py  02_synthetic.py  03_random_init.py  05_benchmark_fps.py  08_prepare_geometry_priors.py  utils.py
py_viewer/: README.md  __init__.py  __main__.py  api.py  assets.py  camera.py  checkpoint.py  cli.py  geometry.frag.glsl  geometry.vert.glsl  gl_viewer.py  post.frag.glsl  post.vert.glsl  scene.py  viewer.py
py_viewer/shaders/: __init__.py  geom.frag.glsl  geom.vert.glsl  post.frag.glsl  post.vert.glsl
python/diffsoup/: __init__.py  multires.py  optimize.py  point3d.py  priors.py  rasterize.py  regularization.py  remesh.py  surface.py
src/: main.cpp  remesh.cpp  remesh.h  remesh_clip.cpp  remesh_clip.h
src/cuda/: cuda_common.cuh  encoding.cu  encoding.cuh  multires.cu  multires.cuh  rasterize.cu  rasterize.cuh
tests/: test_clip_split_policy.py  test_color_mlp.py  test_cuda_optimizations.py  test_geometry_priors.py  test_optimizer_state_migration.py  test_regularization.py  test_ssim.py
viewer/: CMakeLists.txt  pyproject.toml
viewer/python/diffsoupviewer/: __init__.py
