[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.11.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "diffsoup"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0"
]

[project.optional-dependencies]
py-viewer = [
    "numpy",
    "pillow",
    "PyQt5>=5.15",
    "PyOpenGL>=3.1"
]
py-viewer-fast = [
    "numpy",
    "pillow",
    "PyQt5>=5.15",
    "PyOpenGL>=3.1",
    "PyOpenGL-accelerate>=3.1"
]

[tool.scikit-build]
build.verbose = true
wheel.packages = ["python/diffsoup", "py_viewer"]

[tool.pyrefly]
search-path = [".", "python", "examples", "viewer/python"]
