[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.11.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "diffsoup"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0"
]

[tool.scikit-build]
build.verbose = true
wheel.packages = ["python/diffsoup"]

[tool.pyrefly]
preset = "basic"
search-path = [".", "src", "python", "examples"]
